# movidius_tensorflow

./: .gitignore  README.md  compare_results.py  freeze_graph.py  generate_simplified_testgraph.py  openvino_inverence_python.py  use_frozen_graph.py
graph_data/: graph.pbtxt  model.best.index  optimized_graph_FP16.mapping  optimized_graph_FP16.xml  optimized_graph_FP32.mapping  optimized_graph_FP32.xml  test_graph.index
inference/: openvino_inference.py  openvino_inverence_python.py  plain_tensorflow.py  use_frozen_graph.py
movidius_ros/: CMakeLists.txt  package.xml
movidius_ros/include/common/: common.h  slog.h
movidius_ros/include/movidius_ros/: human_pose.h  human_pose_estimator.h  movidius_ros.h
movidius_ros/launch/: movidius_ros.launch
movidius_ros/parameters/: default.yaml
movidius_ros/resources/global_trajectories/innopark_simulated/: global_trajectory_1.txt  global_trajectory_10.txt  global_trajectory_11.txt  global_trajectory_12.txt  global_trajectory_2.txt  global_trajectory_3.txt  global_trajectory_4.txt  global_trajectory_5.txt  global_trajectory_6.txt  global_trajectory_7.txt  global_trajectory_8.txt  global_trajectory_9.txt
movidius_ros/resources/scripts/real_world/: end2end.sh  reactive.sh
movidius_ros/resources/scripts/simulation/: generate_data_random_gates.sh  test.sh  test_random_gates_reactive.sh  test_track_only.sh  test_validation_gates.sh  track.sh
movidius_ros/resources/simulation/vehicles/: hummingbird_rgbcamera300200.gazebo
movidius_ros/resources/worlds/: random_gates.world
movidius_ros/src/: human_pose.cpp  human_pose_estimator.cpp  movidius_ros.cpp  movidius_ros_node.cpp
simplified_testgraph/: checkpoint  optimized_graph_FP32.xml
tensorflow_code/best_checkpoint/: graph.pbtxt  model.best.index
tensorflow_code/best_checkpoint/real_world/: checkpoint  model-89.index  model.best.index  readme
tensorflow_code/best_checkpoint/real_world/muted/: model.best.index
tensorflow_code/best_checkpoint/real_world_all/: checkpoint  model.best.index  readme
tensorflow_code/best_checkpoint/real_world_jungle/: checkpoint  model.best.index  readme
tensorflow_code/best_checkpoint/real_world_normal/: checkpoint  model.best.index  readme
tensorflow_code/best_checkpoint/real_world_zurich/: checkpoint  model.best.index
tensorflow_code/best_checkpoint/simulation/: checkpoint  model.best.index
tensorflow_code/results/: events.out.tfevents.1544363246.elia-ThinkPad-P51
tensorflow_code/src/: freeze_graph_example.py  freeze_model.py  generate_frozen_testgraph.py  train_da_shit.sh  train_reactive_learner.py  utils.py
tensorflow_code/src/models/: base_learner.py  common_flags.py  data_utils.py  reactive_learner.py  train_commands
training/results/: checkpoint  events.out.tfevents.1544363198.elia-ThinkPad-P51  events.out.tfevents.1544424361.elia-ThinkPad-P51  events.out.tfevents.1544424374.elia-ThinkPad-P51  graph.pbtxt  model.best.index
training/src/: train_da_shit.sh  train_network.py
training/src/models/: common_flags.py  data_utils.py  datagenerator.py  learner.py  nets.py  utils.py
